# backend12

./: .env.example  .gitignore  AUTHENTICATION_UPGRADE.md  README.md  SECURITY.md  alembic.ini  generate_password_hash.py  pyproject.toml  requirements.txt  supabase_setup.sql  vercel.json  verify_password.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 473878844965_create_gallery_images_table.py  f1f353154647_add_display_order_to_gallery_images.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routes/: cms.py  gallery.py
app/services/: cloudinary_service.py
app/utils/: auth.py  image_converter.py  jwt_auth.py  rate_limit.py
